--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         import { GoogleGenAI } from "@google/genai";
 
         // 【ここをあなたのキーに！】
-        const API_KEY = "あなたのAPIキー"; 
+        const API_KEY = "AIzaSyDBljntEkcSJdNFtUk3FHch-RRR95o6Cck"; 
 
         const genAI = new GoogleGenAI(API_KEY);
         const model = genAI.getGenerativeModel({ 
