--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
 <script>
   // -----------------------------
   // ここにAPIを入れる（後で置換する）
-  // -----------------------------
-  const API_KEY = "ここにAPIを入れる";
+  const API_KEY = "AIzaSyXXXXXXXXXXXXXXX";
   // 公開運用は不可（キーが漏れます）。動作確認用。
 
   const SYSTEM_INSTRUCTION = `
